@@ -24,7 +24,7 @@ Name: rpm
 %define version @VERSION@
 Version: %{version}
 %{expand: %%define rpm_version %{version}}
-Release: 0.8
+Release: 0.9
 Group: System Environment/Base
 Source: ftp://wraptastic.org/pub/rpm-devel/rpm-%{rpm_version}.tar.gz
 License: GPL
@@ -577,6 +577,9 @@ exit 0
 %{__includedir}/popt.h
 
 %changelog
+* Fri Mar 24 2006 Jeff Johnson <jbj@jbj.org> 4.4.6-0.9
+- assign expected {scalar,array} return types to header tags.
+
 * Tue Mar 21 2006 Jeff Johnson <jbj@jbj.org> 4.4.6-0.8
 - start making rpmRelocation opaque.
 - push rpmHeaderGetEntry() into rpm-python bindings.
